# GeoHydroBayes3D

./: CITATION.cff  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: default.yaml
data/: Final_ML_Dataset_demo.csv  README_demo_dataset.md  borehole_alias_map.csv  borehole_data.csv  borehole_observations.csv  mesh_centroids_demo.csv  parameters_with_groups.csv  posterior_validation_heads.csv  pts_tu1_top_demo.txt  random_field_example.csv  terrain_points_demo.csv  unique_parameters.csv
docs/: code_availability_statement.md  data_availability_statement.md  installation.md  workflow.md
legacy/: README_legacy_inventory.md
matlab_random_field_generation/: README.md  batch_random_field_full.m  compute_element_centers.m  diagnose_template_structure.m  export_jobs_summary.m  generate_abaqus_submit_script_schemeC.m  generate_inp_full_mapping.m  generate_inp_simple_structure.m  generate_inp_with_permeability_optimized.m  generate_random_field_optimized.m  generate_stratified_random_field_full.m  generate_submit_script_full.m  lhsdesign_with_bounds.m  patchrandom.m  quick_test_inp_generation.m  random_view.m  read_inp_mesh.m  read_inp_mesh_fast.m  submit_all_jobs.py  test.m  test_inp_generation_auto.m  verify_generated_inp.m  visualize_parameter_samples.m
metadata/: code_package_manifest.md  data_availability_statement_draft.txt  data_dictionary.csv  demo_config.json  demo_config.yaml  demo_response_weights.csv
outputs/: README.md
scripts/: 00_check_dataset.py  01_demo_kdtree_mapping.py  02_train_padnn.py  03_compare_surrogates.py  (+3 more)
(+15 files in other folders)
